# cpplib

./: .travis.yml  CMakeLists.txt  README.md  any.hpp  main.cpp
include/: bad_cast.h
src/: CMakeLists.txt  any.cpp  any.h  any.hpp  optional.h  shared_ptr.h
test/: CMakeLists.txt
